Добавление 1-го раздела и примененией к нему свойств.

--- a/styles.css
+++ b/styles.css
@@ -113,3 +113,198 @@ ul{
     width: 160px;
     height: auto;
 }
+
+/* 1 раздел */
+.banner {
+    width: 1340px;
+    height: 992px;
+    margin: 0 auto;
+    margin-top: 28px;
+}
+
+.banner .cel {
+    position: relative;
+    width: 1340px;
+    height: 493px;
+    margin: 0 auto;
+    text-align: left;
+    padding: 20px 40px 0px;
+    background-color: #fff;
+    color: #000;
+    overflow: hidden;
+    border-radius: 55px;
+    box-shadow: 0 4px 10px rgba(0, 0, 0, 0.3);
+}
+
+.banner .cel h1 {
+    font-size: 64px;
+    line-height: 1;
+    font-family: 'benzin-bold', sans-serif;
+}
+
+.banner .cel h1 span {
+    color: #3805F2;
+}
+
+.banner .cel p {
+    font-family: "gilroy-light", sans-serif;
+    font-size: 16px;
+    margin-top: 20px;
+    line-height: 1.5;
+}
+
+.banner .pod {
+    margin-top: 74px;
+    background-color: #3805F2;
+    color: #fff;
+    width: 280px;
+    height: 68px auto;
+    border: none;
+    padding: 20px;
+    border-radius: 50px;
+    cursor: pointer;
+    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.3);
+    transition:
+        background-color 0.5s ease,
+        color 0.3s ease,
+        box-shadow 0.3s ease;
+}
+
+.banner .pod:hover {
+    background-color: white;
+    color: #000000
+    box-shadow: 0 0 25px #a855f7
+    border: 1px solid #3805F2;
+    color: #3805F2;
+}
+.banner .pod:active {
+    color: #000000 !important;
+    box-shadow:
+        0 0 8px #3805F2,
+        0 0 8px #3805F2;
+}
+.banner .plan {
+    position: absolute;
+    bottom: 0;
+    left: 495px;
+}
+
+.banner .layout {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    margin-top: 20px;
+}
+
+.banner .left-column {
+    display: flex;
+    flex-direction: column;
+    gap: 20px;
+    flex: 1;
+}
+
+.banner .for {
+    position: relative;
+    width: 427px;
+    height: 282px;
+    background-color: white;
+    border-radius: 55px;
+    padding: 30px 40px;
+    margin-right: 20px;
+}
+.banner .h32{
+    font-family: "benzin-bold", sans-serif;
+    font-size: 40px;
+}
+.banner .t2{
+    font-family: "gilroy-light", sans-serif;
+    font-size: 22px;
+}
+
+.banner .cir {
+    position: absolute;
+    bottom: 20px;
+    right: 20px;
+    transition: transform 0.5s ease;
+}
+
+.banner .cir:hover {
+    transform: rotate(-90deg);
+}
+
+.banner .disc {
+    position: relative;
+    width: 427px;
+    height: 189px;
+    background-color: #3805F2;
+    color: #ffffff;
+    border-radius: 55px;
+    padding: 30px 30px;
+    margin-right: 20px;
+}
+
+.banner .gul {
+    width: 899px;
+    height: 485px;
+    background-color: white;
+    border-radius: 55px;
+    flex: 2;
+    padding: 20px;
+    background-image: url("images/background.jfif");
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    position: relative;
+    overflow: hidden;
+}
+
+.banner .log img {
+    width: 266px;
+    height: 70px;
+    margin-bottom: 30px;
+}
+
+.banner .stats {
+    display: flex;
+    justify-content: space-around;
+    align-items: flex-start;
+    margin-top: 20px;
+    gap: 20px;
+}
+
+.banner .stat-item {
+    text-align: center;
+    background: #fff;
+    color: #000;
+    border-radius: 50%;
+    width: 150px;
+    height: 150px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    box-shadow: 0 0 15px rgba(0, 0, 0, 0.5);
+}
+
+.banner .stat-item h3 {
+    font-family: "benzin-bold", sans-serif;
+    margin: 0;
+    font-size: 24px;
+    color: #000;
+}
+.banner .stat-item p{
+    font-family: "gilroy-light", sans-serif;
+    font-size: 16px;
+}
+
+.banner .stat-item.center {
+    background: #4b00ff;
+    color: #fff;
+    width: 220px;
+    height: 220px;
+}
+
+.banner .stat-item.center h3 {
+    color: #fff;
+}
