--- a/styles.css
+++ b/styles.css
@@ -574,3 +574,117 @@ h2{
     background-color: #3805F2;
     color: #ffffff;
 }
+
+/* блок 3 */
+.promo .zv {
+    width: 60px;
+    height: 60px;
+    margin-right: 10px;
+}
+
+.promo {
+    width: 1340px;
+    height: 577px;
+    margin: 0 auto;
+    margin-top: 250px;
+}
+
+.promo h2 {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    color: white;
+    font-family: 'benzin-bold',sans-serif;
+    font-size: 56px;
+    margin-bottom: 40px;
+}
+
+.promo .promo-card-container {
+    display: flex;
+    justify-content: space-between;
+    flex-wrap: wrap;
+    gap: 20px;
+    position: relative;
+}
+
+.promo .promo-card {
+    position: relative;
+    width: 426px;
+    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+    margin: 20px auto;
+}
+.promo .promo-card img {
+    width: 100%;
+    display: block;
+}
+
+.promo .promo-content {
+    position: absolute;
+    bottom: 0;
+    width: 100%;
+    height: 167px;
+    background-color: #4a00e0;
+    color: white;
+    padding: 20px;
+    border-top-right-radius: 95px;
+    border-bottom-right-radius: 55px;
+    border-bottom-left-radius: 55px;
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+    align-items: flex-start;
+    transition: color 0.3s ease, background-color 0.3s ease;
+}
+
+.promo .promo-content h3 {
+    font-family: 'benzin-bold';
+    margin: 0;
+    font-size: 20px;
+    font-weight: bold;
+}
+
+.promo .promo-content p {
+    font-family: 'gilroy-light',sans-serif;
+    margin: 10px 0 0;
+    font-size: 16px;
+}
+
+.promo .promo-btn {
+    position: absolute;
+    right: 20px;
+    bottom: 20px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 50px;
+    height: 50px;
+    border-radius: 50%;
+    background-color: white;
+    border: none;
+    flex-shrink: 0;
+    transition: transform 0.3s ease;
+}
+
+.promo .promo-btn img {
+    width: 18.5px;
+    height: 20px;
+}
+.promo .promo-card:hover {
+    cursor: pointer;
+}
+.promo .promo-card:hover .promo-content {
+    background-color: white;
+    color: black;
+}
+.promo .promo-card:hover .promo-btn {
+    transform: rotate(-90deg);
+    background-color: #3805F2;
+}
+.zvz {
+    position: absolute;
+    top: 2335px;
+    right: 2px;
+    width: 117px;
+    height: auto;
+    z-index: 5;
+}
