--- a/styles.css
+++ b/styles.css
@@ -959,3 +959,133 @@ h2{
     margin: 0;
     padding: 0 15px;
 }
+
+/* Раздел 5 */
+.FAQ {
+    font-family: 'gilroy-light', sans-serif;
+    padding-top: 130px;
+    max-width: 1340px;
+    height: 799px;
+    margin: 0 auto;
+    background-color: black;
+    color: white;
+}
+
+.FAQ h2 {
+    text-align: center;
+    font-weight: bold;
+    margin-bottom: 40px;
+    font-family: 'benzin-bold';
+    font-size: 56px;
+}
+
+.FAQ .faq-item {
+    width: 100%;
+}
+
+.FAQ .faq-question {
+    background-color: #fff;
+    color: #3805F2;
+    height: 85px;
+    padding: 30px 20px;
+    margin-bottom: 20px;
+    border-radius: 55px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    cursor: pointer;
+    transition: background-color 0.3s ease, color 0.3s ease;
+}
+
+.FAQ .faq-question1 {
+    background-color: #fff;
+    color: black;
+    height: 85px;
+    padding: 30px 20px;
+    margin-bottom: 20px;
+    border-radius: 55px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    cursor: pointer;
+}
+
+.FAQ .faq-question1 .icon1 {
+    font-family: 'gilroy-light';
+    font-size:50px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 65px;
+    color: white;
+    height: 65px;
+    border-radius: 50%;
+    font-weight: bold;
+    background-color: black;
+}
+
+.FAQ .faq-question .icon {
+    font-family: 'gilroy-light';
+    font-size:50px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 65px;
+    height: 65px;
+    border-radius: 50%;
+    font-weight: bold;
+    background-color: #3805F2;
+    transition: transform 0.3s ease, background-color 0.3s ease;
+    position: relative;
+}
+
+.FAQ .faq-question:hover {
+    color: black;
+}
+
+.FAQ .faq-question:hover .icon {
+    background-color: black;
+}
+
+.FAQ .faq-answer {
+    font-family: 'gilroy-light',sans-serif;
+    font-size: 16px;
+    background-color: black;
+    color: white;
+    padding: 20px 30px;
+    margin-bottom: 20px;
+}
+
+.FAQ .faq-more {
+    font-family: 'benzin-bold',sans-serif;
+    background-color: #3805F2;
+    color: white;
+    padding: 15px 30px;
+    border: none;
+    width: 100%;
+    height: 76px;
+    border-radius: 55px;
+    cursor: pointer;
+    font-size: 16px;
+    font-weight: bold;
+    display: block;
+    margin: 30px auto 0;
+    text-align: center;
+    transition: background-color 0.3s ease, color 0.3s ease;
+}
+
+.FAQ .faq-more:hover {
+    background-color: white;
+    color: black;
+}
+
+.FAQ .faq-question .icon::before {
+    content: "+";
+    position: absolute;
+    font-size: 50px;
+    color: white;
+}
+
+.FAQ .faq-question:hover .icon::before {
+    content: "-";
+}
